fix github's submit-maven action